restored old junit3 runner wich works significanntly faster for junit3 suites